test/users/weili/raiseType.good
raiseType.chpl:3: syntax error: near 'return'
raiseType.chpl:4: syntax error: near 'return'
